# [[file:vecfx.note::20502207][20502207]]
[package]
name = "vecfx"
version = "0.1.6"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Extra batteries for a vec of floats"
homepage = "https://github.com/gchemol/vecfx"
repository = "https://github.com/gchemol/vecfx"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = {version="0.31", optional = true, features=["serde-serialize"]}
ordered-float = {version="3", features=["serde", "rand"]}
approx = "0.5"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
default = []
# 20502207 ends here
